@@ -13,11 +13,14 @@ buildscript {
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.1.0'
     id "me.champeau.gradle.jmh" version "0.4.8"
+    id "com.github.lkishalmi.gatling" version "3.2.9"
 }
 
 apply plugin: 'jcstress'
+apply plugin: 'scala'
 
 dependencies {
+    compile 'org.scala-lang:scala-library:2.11.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.openjdk.jcstress', name: 'jcstress-core', version: '0.5'
     compile group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.21'
@@ -34,8 +37,15 @@ jmhJar {
 }
 
 jmh {
-    //profilers = ["dtraceasm"]
-    jvmArgs = ["-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+TrustFinalNonStaticFields", "-XX:-UseBiasedLocking","-XX:+UnlockDiagnosticVMOptions","-XX:+PrintAssembly"]
+    jvmArgs = [
+            "-server",
+            "-XX:+AggressiveOpts",
+            "-XX:+UnlockExperimentalVMOptions",
+            "-XX:+TrustFinalNonStaticFields",
+            "-XX:-UseBiasedLocking",
+            "-XX:+UnlockDiagnosticVMOptions",
+            "-XX:+PrintAssembly"
+    ]
 }
 
 shadowJar {
